[FIX] website: keep file logo in translate mode
Steps to reproduce the issue:
- Have a website in English (main) and French
- Edit the website in the main lang (English)
- Drop Image text block
- Change the image to a document
- Save
- Edit the translation in French

=> The document logo becomes invisible.

This commit fixes this issue.

TODO: remove after merge of https://github.com/odoo/odoo/pull/165109

task-3626918

--- a/addons/website/static/src/scss/website.wysiwyg.scss
+++ b/addons/website/static/src/scss/website.wysiwyg.scss
@@ -44,7 +44,7 @@
 html[lang] > body.editor_enable {
     [data-oe-translation-state]:not(img) {
         @include translationStateStyles(
-            background,
+            background-color,
             rgba($o-we-content-to-translate-color, 0.5),
             rgba($o-we-translated-content-color, 0.25),
             rgba($o-we-translated-content-color, 0.5)
